--- a/src/app/navigation-bar/navigation-bar.component.html
+++ b/src/app/navigation-bar/navigation-bar.component.html
@@ -1,1 +1,9 @@
-<p>navigation-bar works!</p>
+<div class="navigation__container">
+    <span class="navigation__logo">Rocket <b>NFTs</b></span>
+    <ul class="navigation__navbar">
+        <li class="navigation__navbar-item"><a href="">Comprar NFT</a></li>
+        <li class="navigation__navbar-item"><a href="">Sobre</a></li>
+        <li class="navigation__navbar-item"><a href="">FAQ</a></li>
+    </ul>
+    <button class="navigation__btn"><img src="../../assets/assets/logo_MetaMask.svg"> carteira</button>
+</div>
