banner-main read

--- a/src/app/banner-main/banner-main.component.html
+++ b/src/app/banner-main/banner-main.component.html
@@ -1,1 +1,25 @@
-<p>banner-main works!</p>
+<div class="banner-main__container">
+    <div class="banner-main__mercadoDigital">
+        <p class="banner-main__mercadoDigital-text">Mercado digital para colecionáveis em criptos e tokens não fungível (NFT). 
+            Compre, venda e descubra ativos digitais exclusivos para você.</p>
+        <div class="banner-main__artistas-selecionados">
+            <div class="artistas-selecionados__avatars">
+                <img src="../../assets/assets/artista-1.png" alt="" class="avatars__avatar">
+                <img src="../../assets/assets/artista-2.png" alt="" class="avatars__avatar">
+                <img src="../../assets/assets/artista-3.png" alt="" class="avatars__avatar">
+                <img src="../../assets/assets/artista-4.png" alt="" class="avatars__avatar">
+            </div>
+            <div class="artisas-selecionados__info">
+                <p class="artistas-selecionados__info-number">+10</p>
+                <p class="artistas-selecionados__info-description">Artistas selecionados</p>
+            </div>
+        </div>
+    </div>
+    <div class="banner-main__verdadeDigital">
+        <h2 class="banner-main__verdadeDigital-title">Descubra a verdadeira <br> 
+            arte digital e <br> colecione diversas <br><b>NFTs</b></h2>
+    </div>
+    <div class="banner-main__badge">
+        <img src="../../assets/assets/badge.svg" alt="" class="banner-main__badge-img">
+    </div>
+</div>
