--- a/src/app/navigation-bar/navigation-bar.component.css
+++ b/src/app/navigation-bar/navigation-bar.component.css
@@ -4,16 +4,18 @@
     justify-content: space-between;
     align-items: center;
     font-family: arial;
-    margin-left: 82px;
-    margin-right: 80px;
-    margin-top: 57px;
+    padding-left: 82px;
+    padding-right: 80px;
+    padding-top: 57px;
+    padding-bottom: 90px;
+    color: #fff;
 }
 .navigation__logo{
     font-size: 40px;
     font-weight: bold;
 }
 .navigation__logo>b{
-    color: #FF5B50;
+    color: var(--color-logo);
 }
 .navigation__navbar{
     display: flex;
@@ -28,6 +30,7 @@
     color: black;
     font-size: 18px;
     line-height: 22px;
+    color: #fff;
 }
 .navigation__btn{
     width: 230px;
