:feat: galery is read

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,6 @@
 <header>
     <navigation-bar></navigation-bar>
     <banner-main></banner-main>
+    <galery></galery>
+    <main2></main2>
 </header>
