--- a/src/app/galery/galery.component.html
+++ b/src/app/galery/galery.component.html
@@ -1,1 +1,14 @@
-<p>galery works!</p>
+<div class="galery__container">
+    <div class="galery__top">
+        <img src="../../assets/assets/galeria-1.png" alt="" class="galery__item">
+        <img src="../../assets/assets/galeria-2.png" alt="" class="galery__item">
+        <img src="../../assets/assets/galeria-3.png" alt="" class="galery__item">
+        <img src="../../assets/assets/galeria-4.png" alt="" class="galery__item">
+    </div>
+    <div class="galery__bottom">
+        <img src="../../assets/assets/galeria-5.png" alt="" class="galery__item">
+        <img src="../../assets/assets/galeria-6.png" alt="" class="galery__item">
+        <img src="../../assets/assets/galeria-7.png" alt="" class="galery__item">
+        <img src="../../assets/assets/galeria-8.png" alt="" class="galery__item">
+    </div>
+</div>
