--- a/src/app/banner-main/banner-main.component.css
+++ b/src/app/banner-main/banner-main.component.css
@@ -1,6 +1,7 @@
 .banner-main__container {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   font-family: arial;
   padding-left: 82px;
   padding-right: 80px;
@@ -25,7 +26,7 @@
     width: 40vw;
 }
 .banner-main__verdadeDigital-title {
-  margin-top: 0;
+  margin: 0;
   font-size: 50px;
   font-weight: 400;
   line-height: 61px;
@@ -38,6 +39,6 @@
     width: 20vw;
 }
 .banner-main__badge-img{
-    width: 100%;
+    width: 70%;
     height: auto;
 }
