--- a/src/app/main4/main4.component.html
+++ b/src/app/main4/main4.component.html
@@ -1,1 +1,72 @@
-<p>main4 works!</p>
+<div class="melhores-artistas__container">
+  <h2 class="melhores-artistas__titulo">Melhores <b>artistas</b></h2>
+  <div class="melhores-artistas__card-container">
+    <div class="melhores-artistas__card">
+      <img
+        src="../../assets/assets/artista-1.png"
+        alt=""
+        class="melhores-artistas__card-photo"
+      />
+      <div class="melhores-artistas__card-text">
+        <p class="melhores-artistas__card-nome">Mayk Brito</p>
+        <p class="melhores-artistas__card-qtdFotografias">80 Fotografias</p>
+      </div>
+    </div>
+    <div class="melhores-artistas__card active">
+      <img
+        src="../../assets/assets/artista-2.png"
+        alt=""
+        class="melhores-artistas__card-photo"
+      />
+      <div class="melhores-artistas__card-text">
+        <p class="melhores-artistas__card-nome">Jakeliny G.</p>
+        <p class="melhores-artistas__card-qtdFotografias">99 Fotografias</p>
+      </div>
+    </div>
+    <div class="melhores-artistas__card">
+      <img
+        src="../../assets/assets/artista-3.png"
+        alt=""
+        class="melhores-artistas__card-photo"
+      />
+      <div class="melhores-artistas__card-text">
+        <p class="melhores-artistas__card-nome">João I. (Biro)</p>
+        <p class="melhores-artistas__card-qtdFotografias">50 Fotografias</p>
+      </div>
+    </div>
+    <div class="melhores-artistas__card">
+      <img
+        src="../../assets/assets/artista-4.png"
+        alt=""
+        class="melhores-artistas__card-photo"
+      />
+      <div class="melhores-artistas__card-text">
+        <p class="melhores-artistas__card-nome">Tamires Santos</p>
+        <p class="melhores-artistas__card-qtdFotografias">43 Fotografias</p>
+      </div>
+    </div>
+    <div class="melhores-artistas__card">
+      <img
+        src="../../assets/assets/artista-5.png"
+        alt=""
+        class="melhores-artistas__card-photo"
+      />
+      <div class="melhores-artistas__card-text">
+        <p class="melhores-artistas__card-nome">Ana Silva</p>
+        <p class="melhores-artistas__card-qtdFotografias">28 Fotografias</p>
+      </div>
+    </div>
+    <div class="melhores-artistas__card">
+      <img
+        src="../../assets/assets/artista-6.png"
+        alt=""
+        class="melhores-artistas__card-photo"
+      />
+      <div class="melhores-artistas__card-text">
+        <p class="melhores-artistas__card-nome">Diego F.</p>
+        <p class="melhores-artistas__card-qtdFotografias">20 Fotografias</p>
+      </div>
+    </div>
+  </div>
+  <span class="melhores-artitas__verTodos">Ver todos os artistas</span>
+</div>
