--- a/src/app/rodape/rodape.component.html
+++ b/src/app/rodape/rodape.component.html
@@ -1,1 +1,43 @@
-<p>rodape works!</p>
+<div class="rodape__container">
+    <div class="rodape__sessao-top">
+        <span class="sessao-top__logo">Rocket <b>NFTs</b></span>
+    </div>
+    <div class="rodape__sessao-main">
+        <div class="sessao-main__left">
+            <p class="sessao-main__left-text">Fique por dentro de <br><b>todas as novidades</b></p>
+            <div class="sessao-main__left-inputBox"><input type="text" placeholder="nft@rocketseat.com.br"><button>Enviar</button></div>
+        </div>
+        <div class="sessao-main__right">
+            <ul class="list">
+                <li class="list-title">Empresa</li>
+                <li class="list-item">Sobre</li>
+                <li class="list-item">Serviços</li>
+                <li class="list-item">Time</li>
+                <li class="list-item">Carreira</li>
+            </ul>
+            <ul class="list">
+                <li class="list-title">Mapa</li>
+                <li class="list-item">Galeria</li>
+                <li class="list-item">Populares</li>
+                <li class="list-item">Vendas</li>
+                <li class="list-item">Contato</li>
+            </ul>
+            <ul class="list">
+                <li class="list-title">Links</li>
+                <li class="list-item">FAQs</li>
+                <li class="list-item">Termos</li>
+                <li class="list-item">Política</li>
+                <li class="list-item">Ajuda</li>
+            </ul>
+        </div>
+    </div>
+    <div class="rodape__sessao-bottom">
+        <span class="sessao-bottom__site">www.rocketseat.com.br</span>
+        <div class="sessao-bottom__social-medias">
+            <img src="../../assets/assets/instagram.svg" alt="" class="social-medias__icon">
+            <img src="../../assets/assets/youtube.svg" alt="" class="social-medias__icon">
+            <img src="../../assets/assets/twitter.svg" alt="" class="social-medias__icon">
+            <img src="../../assets/assets/email.svg" alt="" class="social-medias__icon">
+    
+    </div>
+</div>
