--- a/src/app/main4/main4.component.html
+++ b/src/app/main4/main4.component.html
@@ -68,5 +68,8 @@
       </div>
     </div>
   </div>
-  <span class="melhores-artitas__verTodos">Ver todos os artistas</span>
+  <div class="verTodos__container">
+    <span class="melhores-artitas__verTodos">Ver todos os artistas</span
+    ><img src="../../assets/assets/arrow-orange.svg" alt="" />
+  </div>
 </div>
