--- a/src/app/main4/main4.component.css
+++ b/src/app/main4/main4.component.css
@@ -5,6 +5,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-bottom: 150px;
   }
 .melhores-artistas__titulo {
   font-weight: 700;
@@ -52,4 +53,7 @@
   font-weight: 400;
   font-size: 20px;
   line-height: 24px;
+}
+.verTodos__container > span{
+  margin-right: 2rem;
 }
