--- a/src/app/rodape/rodape.component.css
+++ b/src/app/rodape/rodape.component.css
@@ -6,6 +6,7 @@
 .rodape__sessao-top {
   padding-top: 82px;
   padding-bottom: 82px;
+  padding-left: 82px;
 }
 .sessao-top__logo {
   font-weight: 700;
@@ -17,8 +18,6 @@
 }
 .rodape__sessao-main {
   width: 100%;
-  padding-top: 67px;
-  padding-bottom: 67px;
   border-top: 1px solid #5a5757;
   border-bottom: 1px solid #5a5757;
   display: flex;
@@ -28,6 +27,9 @@
   display: flex;
   flex-direction: column;
   padding-left: 80px;
+  border-right: 1px solid #5a5757;
+  padding-top: 67px;
+  padding-bottom: 67px;
 }
 .sessao-main__left-text {
   font-weight: 500;
@@ -41,7 +43,8 @@
 .sessao-main__left-inputBox {
   height: 70px;
   background-color: #0d0d0d;
-  width: 70%;
+  width: 90%;
+  border-radius: 10px;
 }
 .sessao-main__left-inputBox > input {
   background-color: transparent;
@@ -59,6 +62,7 @@
   height: 100%;
   width: 30%;
   border: none;
+  border-radius: 0px 5px 5px 0px;
   font-size: 20px;
   font-weight: bold;
 }
@@ -69,6 +73,8 @@
   align-items: center;
   padding-left: 122px;
   padding-right: 190px;
+  padding-top: 67px;
+  padding-bottom: 67px;
 }
 .sessao-main__right > .list {
   list-style: none;
@@ -95,6 +101,7 @@
   justify-content: space-between;
   align-items: center;
   color: #5a5757;
+  padding-left: 82px;
 }
 .sessao-bottom__site {
   font-weight: 400;
