--- a/src/app/main4/main4.component.css
+++ b/src/app/main4/main4.component.css
@@ -1,7 +1,6 @@
 .melhores-artistas__container {
-    background-color: #0e0e0e;
-    color: #ffffff;
-    font-family: arial;
+    background-color: var(--body-background);
+    color: var(--text-color);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -11,13 +10,13 @@
   font-weight: 700;
   font-size: 50px;
   line-height: 61px;
-  color: #ffffff;
+  color: var(--text-color);
   margin: 0;
   margin-bottom: 120px;
   text-align: center;
 }
 .melhores-artistas__titulo > b {
-  color: #ff5b50;
+  color: var(--color-logo);
 }
 .melhores-artistas__card-container {
   display: flex;
@@ -31,7 +30,7 @@
   display: flex;
   min-width: 250px;
   width: 25%;
-  background-color: #252525;
+  background-color: var(--card-color);
   justify-content: space-between;
   align-items: center;
   padding: 1rem;
@@ -47,7 +46,7 @@
   font-weight: 500;
   font-size: 20px;
   line-height: 24px;
-  color: #ff5b50;
+  color: var(--color-logo);
 }
 .melhores-artitas__verTodos {
   font-weight: 400;
