--- a/src/app/navigation-bar/navigation-bar.component.css
+++ b/src/app/navigation-bar/navigation-bar.component.css
@@ -3,12 +3,11 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    font-family: arial;
     padding-left: 82px;
     padding-right: 80px;
     padding-top: 57px;
     padding-bottom: 90px;
-    color: #fff;
+    color: var(--text-color);
 }
 .navigation__logo{
     font-size: 40px;
@@ -27,10 +26,9 @@
 }
 .navigation__navbar-item>a{
     text-decoration: none;
-    color: black;
     font-size: 18px;
     line-height: 22px;
-    color: #fff;
+    color: var(--text-color);
 }
 .navigation__btn{
     width: 230px;
@@ -38,8 +36,8 @@
     font-weight: 700;
     font-size: 16px;
     line-height: 20px;
-    background-color: #fff;
-    color: #000;
+    background-color: var(--text-color);
+    color: var(--black-text);
     display: flex;
     justify-content: center;
     align-items: center;
