--- a/src/app/rodape/rodape.component.css
+++ b/src/app/rodape/rodape.component.css
@@ -1,7 +1,6 @@
 .rodape__container {
-  background-color: #252525;
-  color: #fff;
-  font-family: arial;
+  background-color: var(--card-color);
+  color: var(--text-color);
 }
 .rodape__sessao-top {
   padding-top: 82px;
@@ -18,8 +17,8 @@
 }
 .rodape__sessao-main {
   width: 100%;
-  border-top: 1px solid #5a5757;
-  border-bottom: 1px solid #5a5757;
+  border-top: 1px solid var(--subtitle-color);
+  border-bottom: 1px solid var(--subtitle-color);
   display: flex;
 }
 .sessao-main__left {
@@ -27,7 +26,7 @@
   display: flex;
   flex-direction: column;
   padding-left: 80px;
-  border-right: 1px solid #5a5757;
+  border-right: 1px solid var(--subtitle-color);
   padding-top: 67px;
   padding-bottom: 67px;
 }
@@ -38,7 +37,7 @@
   width: 50%;
 }
 .sessao-main__left-text > b {
-  color: #ff5b50;
+  color: var(--color-logo);
 }
 .sessao-main__left-inputBox {
   height: 70px;
@@ -49,7 +48,7 @@
 .sessao-main__left-inputBox > input {
   background-color: transparent;
   border: none;
-  color: #5a5757;
+  color: var(--subtitle-color);
   font-size: 20px;
   width: 70%;
   height: 100%;
@@ -57,8 +56,8 @@
   padding-left: 10px;
 }
 .sessao-main__left-inputBox > button {
-  background-color: #fff;
-  color: #000;
+  background-color: var(--text-color);
+  color: var(--black-text);
   height: 100%;
   width: 30%;
   border: none;
@@ -84,14 +83,14 @@
   font-weight: 700;
   font-size: 20px;
   line-height: 24px;
-  color: #ffffff;
+  color: var(--text-color);
   margin-bottom: 7px;
 }
 .list-item {
   font-weight: 400;
   font-size: 20px;
   line-height: 24px;
-  color: #5a5757;
+  color: var(--subtitle-color);
   margin-bottom: 15px;
 }
 .rodape__sessao-bottom {
@@ -100,7 +99,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  color: #5a5757;
+  color: var(--subtitle-color);
   padding-left: 82px;
 }
 .sessao-bottom__site {
