--- a/src/styles.css
+++ b/src/styles.css
@@ -1,12 +1,17 @@
-body{
-  margin: 0;
+@font-face {
+  font-family: Montserrat;
+  src: url(../src/assets/assets/Montserrat/static/Montserrat-Regular.ttf);
 }
 :root {
-    --body-background: #0e0e0e;
-    --color-logo: #ff5b50;
-    --card-color: #252525;
-    --text-color: #fff;
-    --subtitle-color: #5a5757;
-    --black-text: #000;
-    --color-input: #0D0D0D;
-  }
+  --body-background: #0e0e0e;
+  --color-logo: #ff5b50;
+  --card-color: #252525;
+  --text-color: #fff;
+  --subtitle-color: #5a5757;
+  --black-text: #000;
+  --color-input: #0D0D0D;
+}
+body{
+  margin: 0;
+  font-family: Montserrat;
+}
