--- a/src/app/navigation-bar/navigation-bar.component.css
+++ b/src/app/navigation-bar/navigation-bar.component.css
@@ -1,13 +1,10 @@
 .navigation__container{
-    height: 10vh;
-    display: flex;
-    justify-content: space-between;
     align-items: center;
-    padding-left: 82px;
-    padding-right: 80px;
-    padding-top: 57px;
-    padding-bottom: 90px;
     color: var(--text-color);
+    display: flex;
+    height: 10vh;
+    justify-content: space-between;
+    padding: 57px 80px 90px 82px;
 }
 .navigation__logo{
     font-size: 40px;
@@ -18,28 +15,28 @@
 }
 .navigation__navbar{
     display: flex;
-    justify-content: space-around;
     gap: 2rem;
+    justify-content: space-around;
 }
 .navigation__navbar-item{
     list-style: none;
 }
 .navigation__navbar-item>a{
-    text-decoration: none;
+    color: var(--text-color);
     font-size: 18px;
     line-height: 22px;
-    color: var(--text-color);
+    text-decoration: none;
 }
 .navigation__btn{
-    width: 230px;
-    height: 50px;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 20px;
+    align-items: center;
     background-color: var(--text-color);
     color: var(--black-text);
     display: flex;
-    justify-content: center;
-    align-items: center;
+    font-weight: 700;
+    font-size: 16px;
     gap: 1rem;
+    height: 50px;
+    justify-content: center;
+    line-height: 20px;
+    width: 230px;
 }
