--- a/src/app/banner-main/banner-main.component.css
+++ b/src/app/banner-main/banner-main.component.css
@@ -25,7 +25,7 @@
   width: 40vw;
 }
 .banner-main__verdadeDigital-title {
-  font-size: 50px;
+  font-size: 3.1rem;
   font-weight: 400;
   line-height: 61px;
   letter-spacing: 0em;
@@ -40,4 +40,24 @@
 .banner-main__badge-img {
   height: auto;
   width: 70%;
+}
+@media screen and (min-width: 320px) and (max-width: 480px){
+  .banner-main__container{
+    padding: 1rem;
+    display: block;
+  }
+  .banner-main__mercadoDigital-text{
+    width: 90vw;
+    word-break: keep-all;
+  }
+  .banner-main__artistas-selecionados{
+    display: none;
+  }
+  .banner-main__verdadeDigital-title{
+    font-size: 2rem;
+    line-height: normal;
+  }
+  .banner-main__badge{
+    display: none;
+  }
 }
