--- a/src/app/rodape/rodape.component.css
+++ b/src/app/rodape/rodape.component.css
@@ -105,3 +105,24 @@
   justify-content: space-around;
   width: 30vw;
 }
+@media screen and (min-width: 320px) and (max-width: 480px){
+  .rodape__sessao-main{
+    flex-direction: column;
+  }
+  .sessao-main__left{
+    width: auto;
+  }
+  .sessao-main__right{
+    width: auto;
+    padding: 0;
+  }
+  .sessao-main__right > .list{
+    padding: 0;
+  }
+  .rodape__sessao-bottom{
+    padding: 0;
+  }
+  .sessao-bottom__social-medias{
+    width: auto;
+  }
+}
