--- a/src/app/main3/main3.component.css
+++ b/src/app/main3/main3.component.css
@@ -55,3 +55,19 @@
 .populares-card__img {
   width: 100%;
 }
+@media screen and (min-width: 320px) and (max-width: 480px){
+  .main3__container{
+    padding: 100px 10px 80px 10px;
+  }
+  .main3__title{
+    text-align: center;
+    font-size: 2.5rem;
+  }
+  .main3__populares-container{
+    flex-direction: column;
+    align-items: center;
+  }
+  .populares-card{
+    width: 80vw;
+  }
+}
