:style: melhorando a responsividade de footer e main2

--- a/src/app/main2/main2.component.css
+++ b/src/app/main2/main2.component.css
@@ -70,6 +70,7 @@
     flex-direction: column;
     height: auto;
     box-sizing: border-box;
+    padding-top: 3rem;
   }
   .main2__number-container{
     width: auto;
