--- a/src/app/main2/main2.component.css
+++ b/src/app/main2/main2.component.css
@@ -94,3 +94,18 @@
     height: 50vw;
   }
 }
+@media screen and (min-width: 769px) and (max-width: 1279px){
+  .main2__container{
+    width: 100vw;
+  }
+  .main2__number-container{
+    width: 30vw;
+  }
+  .main2__center{
+    width: 70vw;
+  }
+  .main2__content-container{
+    width: 100%;
+    flex-direction: column;
+  }
+}
