--- a/src/app/rodape/rodape.component.css
+++ b/src/app/rodape/rodape.component.css
@@ -146,3 +146,13 @@
     justify-content: space-around;
   }
 }
+@media screen and (min-width: 769px) and (max-width: 1279px){
+  .sessao-main__left{
+    padding-left: 30px; 
+  }
+  .sessao-main__right{
+    padding: 0;
+    padding-top: 67px;
+    padding-right: 10px;
+  }
+}
