--- a/src/app/navigation-bar/navigation-bar.component.css
+++ b/src/app/navigation-bar/navigation-bar.component.css
@@ -1,50 +1,57 @@
-.navigation__container{
-    align-items: center;
-    color: var(--text-color);
-    display: flex;
-    height: 10vh;
-    justify-content: space-between;
-    padding: 57px 80px 90px 82px;
+.navigation__container {
+  align-items: center;
+  color: var(--text-color);
+  display: flex;
+  height: 10vh;
+  justify-content: space-between;
+  padding: 57px 80px 90px 82px;
 }
-.navigation__logo{
-    font-size: 2.5rem;
-    font-weight: bold;
+.navigation__logo {
+  font-size: 2.5rem;
+  font-weight: bold;
 }
-.navigation__logo>b{
-    color: var(--color-logo);
+.navigation__logo > b {
+  color: var(--color-logo);
 }
-.navigation__navbar{
-    display: flex;
-    gap: 2rem;
-    justify-content: space-around;
+.navigation__navbar {
+  display: flex;
+  gap: 2rem;
+  justify-content: space-around;
 }
-.navigation__navbar-item{
-    list-style: none;
+.navigation__navbar-item {
+  list-style: none;
 }
-.navigation__navbar-item>a{
-    color: var(--text-color);
-    font-size: 18px;
-    line-height: 22px;
-    text-decoration: none;
+.navigation__navbar-item > a {
+  color: var(--text-color);
+  font-size: 18px;
+  line-height: 22px;
+  text-decoration: none;
 }
-.navigation__btn{
-    align-items: center;
-    background-color: var(--text-color);
-    color: var(--black-text);
-    display: flex;
-    font-weight: 700;
-    font-size: 16px;
-    gap: 1rem;
-    height: 50px;
-    justify-content: center;
-    line-height: 20px;
-    width: 230px;
+.navigation__btn {
+  align-items: center;
+  background-color: var(--text-color);
+  color: var(--black-text);
+  display: flex;
+  font-weight: 700;
+  font-size: 16px;
+  gap: 1rem;
+  height: 50px;
+  justify-content: center;
+  line-height: 20px;
+  width: 230px;
 }
 @media screen and (min-width: 320px) and (max-width: 480px) {
-    .navigation__container{
-        padding: 1rem;
-    }
-    .navigation__navbar, .navigation__btn{
-        display: none;
-    }
+  .navigation__container {
+    padding: 1rem;
+  }
+  .navigation__navbar,
+  .navigation__btn {
+    display: none;
+  }
+}
+@media screen and (min-width: 760px) and (max-width: 1279px) {
+  .navigation__container {
+    padding: 50px 30px 60px 20px;
+    gap: 1rem;
+}
 }
