:style: corrigindo problema de responsividade no main3

--- a/src/app/main3/main3.component.css
+++ b/src/app/main3/main3.component.css
@@ -67,6 +67,9 @@
     flex-direction: column;
     align-items: center;
   }
+  .main3__populares-container >hr{
+    display: none;
+  }
   .populares-card{
     width: 80vw;
   }
