--- a/src/app/banner-main/banner-main.component.css
+++ b/src/app/banner-main/banner-main.component.css
@@ -56,6 +56,7 @@
   .banner-main__verdadeDigital-title{
     font-size: 2rem;
     line-height: normal;
+    width: 80vw;
   }
   .banner-main__badge{
     display: none;
