--- a/src/app/main2/main2.component.css
+++ b/src/app/main2/main2.component.css
@@ -4,7 +4,7 @@
   color: var(--text-color);
   display: flex;
   font-family: arial;
-  height: 80vh;
+  height: auto;
 }
 .main2__number-container {
   align-items: center;
@@ -76,6 +76,9 @@
     width: auto;
     flex-direction: row;
     gap: 1.5rem;
+  }
+  .number-container__number{
+    font-size: 2.5rem;
   }
   .number-container__type{
     font-size: 1rem;
